_generated-doc/2.7/config/quarkus-micrometer-config-group-config-prometheus-config-group.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-group-config-prometheus-config-group_configuration]]link:#quarkus-micrometer-config-group-config-prometheus-config-group_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.enabled]]`link:#quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.enabled[quarkus.micrometer.export.prometheus.enabled]`

[.description]
--
Support for export to Prometheus. 
 Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.registry-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.path]]`link:#quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.path[quarkus.micrometer.export.prometheus.path]`

[.description]
--
The path for the prometheus metrics endpoint (produces text/plain). The default value is
`metrics` and is resolved relative to the non-application endpoint (`q`), e.g.
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served
from the configured path.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.default-registry]]`link:#quarkus-micrometer-config-group-config-prometheus-config-group_quarkus.micrometer.export.prometheus.default-registry[quarkus.micrometer.export.prometheus.default-registry]`

[.description]
--
By default, this extension will create a Prometheus MeterRegistry instance. 
 Use this attribute to veto the creation of the default Prometheus MeterRegistry.
--|boolean 
|`true`

|===